# dashlink-backend

./: .gitignore  README.md  implementation_plan.md.resolved
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 4e479c8f40f2_fix_fk_columns_varchar_to_uuid.py  527d3b33e0e0_add_oauth_social_profile_fields.py  559a2c220dbd_add_onboarding_step_to_seller_profiles.py  6f19962942bf_initial_schema.py  86b3f9069218_expand_social_for_facebook_twitter.py  8a34b4704b8d_add_user_profile_fields.py  c4d91f2a0e35_add_pinterest_to_social_platform_enum.py  f789abae4a60_add_tiktok_to_oauth_provider_enum.py
backend/app/: config.py  database.py  main.py  redis.py
backend/app/analytics/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/auth/: dependencies.py  models.py  oauth.py  repository.py  router.py  schemas.py
backend/app/checkout/: models.py  repository.py  router.py  schemas.py  service.py  stock_locker.py
backend/app/core/: base_model.py  base_repository.py  base_schemas.py  countries.py  encryption.py  exceptions.py  middleware.py  pagination.py  permissions.py  protocols.py  rate_limiter.py  security.py  slug.py
backend/app/crm/: router.py  schemas.py  service.py
backend/app/discounts/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/disputes/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/integrations/: openai_client.py  removebg_client.py  storage_client.py
backend/app/notifications/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/orders/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/payments/: models.py  repository.py  router.py  schemas.py  service.py
backend/dashlink_backend.egg-info/: SOURCES.txt  requires.txt
backend/tests/: conftest.py
(+92 files in other folders)
